--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,7 +8,7 @@ body {
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     line-height: 50px;
 }
