--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="card-body">
-            <div class="w-50 mx-auto">
+            <div class="w-50 mx-auto border p-3">
                 <form method="post" th:action="@{/add}" th:object="${playground}">
                     <!--General -->
                     <div class="form-group row">
