--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -36,7 +36,7 @@
     </div>
 
     <script async="async"
-            defer="defer" src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;callback=loadMap">
+            defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap">
     </script>
 
     <footer th:replace="fragments :: footer"></footer>
