--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head th:replace="fragments :: head"></head>
 <body class="container body-content">
 <nav th:replace="fragments :: nav-bar"></nav>
-<h1 th:text="${title}">Default Title</h1>
+<div sec:authorize="hasRole('ROLE_ADMIN')">
+    <h1>Admin home page</h1>
+    <p>Welcome Administrator(<span sec:authentication="principal.username">Admin</span>)</p>
+    <p>
+        <a th:href="@{/logout}">Logout</a>
+    </p>
 
-<form method="post" th:action="@{/admin}">
-    <div th:each="user : ${users}">
-        <input type="checkbox" name="userIds" th:value="${user.id}" th:id="${user.id}"/>
-        <label th:for="${user.id}" th:text="${user.userName}"></label>
-        <br />
+    <h1 th:text="${title}">Default Title</h1>
 
-    </div>
-    <input type="submit" value="Remove Users" />
+    <form method="post" th:action="@{/admin}">
+        <div th:each="user : ${users}">
+            <input type="checkbox" name="userIds" th:value="${user.id}" th:id="${user.id}"/>
+            <label th:for="${user.id}" th:text="${user.userName}"></label>
+            <br />
 
-</form>
+        </div>
+        <input type="submit" value="Remove Users" />
 
+    </form>
+</div>
 </body>
 </html>
