--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head th:replace="fragments :: head"></head>
 
 <body>
@@ -11,6 +12,7 @@
         <div class="card-header text-center">
             <h1 class="card-title" th:text="${title}">Title</h1>
         </div>
+        <div sec:authorize="isAuthenticated()">
 
         <div class="card-body">
             <div class="w-50 mx-auto border p-3">
@@ -173,6 +175,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <footer th:replace="fragments :: footer"></footer>
