Google Map Changes

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -216,7 +216,7 @@
                 <div class="row">
                     <div class="col">
                             <div id="map"></div>
-                            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap" async="async" defer="defer"></script>
+                            <script src="https://maps.googleapis.com/maps/api/js?key=YourKeys&amp;callback=loadMap" async="async" defer="defer"></script>
                     </div>
                 </div>
                 <!--Row 3 | Disqus Comments-->
