Added color coded icons to view.html

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
     <!-- General CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- BootstrapCND | CSS, jQuery, and JavaScript | Template used: bootswatch.com/Journal -->
     <link rel="stylesheet"
