Massages with explanation to Spring Security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,6 +28,11 @@
                                 <input type="password" class="form-control" name="password"
                                        placeholder="Password" />
                             </div>
+                            <div class="form-group">
+                                <label>
+                                    <input type="checkbox" name="remember-me"> Remember Me
+                                </label>
+                            </div>
                             <button type="submit" class="btn btn-success mb-3" th:text="#{label.login}">Login</button>
 
                             <!--Alert Balloon for Invalid Input-->
