--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,6 +48,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
                 <li class="nav-item">
                     <a th:href="@{/list}" class="nav-link">Playgrounds</a>
                 </li>
+                <li class="nav-item">
+                    <a th:href="@{/userInfo}" class="nav-link">MyPage</a>
+                </li>
             </ul>
             <!-- Navbar Search form-->
             <form class="form-inline my-2 my-lg-0 mr-2" th:object="${searchForm}" th:action="@{/results}" >
