--- a/src/main/resources/templates/search/search-results.html
+++ b/src/main/resources/templates/search/search-results.html
@@ -23,6 +23,9 @@
                 </div>
 
                 <p th:unless="${anotherlistmodel} and ${anotherlistmodel.size()}">No Results.</p>
+                <script async="async" defer="defer"
+                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap">
+                </script>
                 <div th:if="${anotherlistmodel} and ${anotherlistmodel.size()}">
 
                     <script async="async" defer="defer"
