--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,9 +49,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
                 <li class="nav-item">
                     <a th:href="@{/list}" class="nav-link">Playgrounds</a>
                 </li>
-                <li class="nav-item">
-                    <a th:href="@{/userInfo}" class="nav-link">MyPage</a>
-                </li>
             </ul>
             <!-- Navbar Search form-->
             <form class="form-inline my-2 my-lg-0 mr-2" th:object="${searchForm}" th:action="@{/results}" >
@@ -66,7 +63,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
                        href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false"
                        sec:authentication="principal.user.userName"></a>
+                    <!--User Dropdown menu-->
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/userInfo}">My Page</a>
                         <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                     </div>
                 </li>
